tests/fixtures/positive/coroutines/SuspendFunWithCoroutineScopeReceiver.kt
package coroutines

import kotlinx.coroutines.CoroutineScope
import kotlinx.coroutines.launch

suspend fun CoroutineScope.doWork() {
    launch {
        println("working")
    }
}
